syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Event {
    EventID eventId = 1;
    string type = 2;
    google.protobuf.Timestamp time = 3;
    google.protobuf.Any data = 4;
}

message EventID {
    repeated string subjects = 1;
    string id = 2;
}

message SubjectEvent {
    string subject = 1;
    enum Type {
        CREATED = 0;
        CLOSED = 1;
    }
    Type type = 2;
}